Project

General

Profile

Actions

Bug #38633

closed

/ceph/src/tools/kvstore_tool.cc:39:1: internal compiler error: Segmentation fault on Bionic

Added by Brad Hubbard about 5 years ago. Updated about 5 years ago.

Status:
Resolved
Priority:
High
Assignee:
Category:
Code Hygiene
Target version:
-
% Done:

0%

Source:
Development
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

a1539b118ed6372c19f321c94e2246f4fd130a33

# /usr/bin/c++  -D_FILE_OFFSET_BITS=64 -D_GNU_SOURCE -D__linux__ -isystem /ceph/build/boost/include -I/ceph/build/src/include -I/ceph/src -isystem /ceph/build/include -I/usr/include/nss -I/usr/include/nspr -isystem /ceph/src/xxHash -isystem /ceph/src/rapidjson/include -isystem /ceph/src/spdk/include -isystem /ceph/build/src/dpdk/include -isystem /ceph/src/rocksdb/include  -Wall -Wtype-limits -Wignored-qualifiers -Winit-self -Wpointer-arith -Werror=format-security -fno-strict-aliasing -fsigned-char -Wno-unknown-pragmas -rdynamic  -ftemplate-depth-1024 -Wnon-virtual-dtor -Wno-unknown-pragmas -Wno-ignored-qualifiers -Wstrict-null-sentinel -Woverloaded-virtual -fno-new-ttp-matching -DCEPH_DEBUG_MUTEX -fstack-protector-strong -fdiagnostics-color=auto -fno-builtin-malloc -fno-builtin-calloc -fno-builtin-realloc -fno-builtin-free -g -fPIE   -DHAVE_CONFIG_H -D__CEPH__ -D_REENTRANT -D_THREAD_SAFE -D__STDC_FORMAT_MACROS -march=core2 -std=c++1z -o CMakeFiles/ceph-kvstore-tool.dir/kvstore_tool.cc.o -c /ceph/src/tools/kvstore_tool.cc                                                                                                             
/ceph/src/tools/kvstore_tool.cc:39:1: internal compiler error: Segmentation fault
 }
 ^
Please submit a full bug report,
with preprocessed source if appropriate.
See <file:///usr/share/doc/gcc-7/README.Bugs> for instructions.

Related issues 1 (0 open1 closed)

Copied to RADOS - Bug #38892: /ceph/src/tools/kvstore_tool.cc:266:1: internal compiler error: Segmentation faultClosedBrad Hubbard

Actions
Actions #1

Updated by Brad Hubbard about 5 years ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 26828
Actions #2

Updated by Sage Weil about 5 years ago

  • Status changed from Fix Under Review to Resolved
Actions #4

Updated by Sebastian Wagner about 5 years ago

  • Copied to Bug #38892: /ceph/src/tools/kvstore_tool.cc:266:1: internal compiler error: Segmentation fault added
Actions

Also available in: Atom PDF