src/tools/kvstore_tool.cc: Move bluestore start-up code

Move this code into a separate function to avoid ICE.

Fixes: http://tracker.ceph.com/issues/38633

Signed-off-by: Brad Hubbard <bhubbard@redhat.com>