src/tools/kvstore_tool.h
@@ -44,6 +44,7 @@ public:
   StoreTool(const std::string& type,
 	    const std::string& path,
 	    bool need_open_db=true);
+  int load_bluestore(const std::string& path, bool need_open_db);
   uint32_t traverse(const std::string& prefix,
                     const bool do_crc,
                     const bool do_value_dump,
